FreeRADIUS 3.0.22 Tue 24 Mar 2020 12:00:00 EDT urgency=low
	Feature improvements
	* Update dictionary.bskyb.  Fixes #3339.
	* Abfab-tls updates from Alejandro Perez.
	* Allow CoA and Disconnect messages over TLS sockets.
	  Fixes #3356.

	Bug fixes
	* Respect the "log_reject" configuration item in more places.
	  Fixes #3352.  This lowers the number of "Login incorrect"
	  messages when "log_reject = no".
	* Fix rpmbuild for Centos > 6.  Patch from Matthew Newton.

FreeRADIUS 3.0.21 Tue 24 Mar 2020 12:00:00 EDT urgency=low
	Feature improvements
	* New stored procedure for allocating IPs with PostgreSQL.
	  Rates of 1500 IPs per second are now possible.
	  See raddb/mods-config/sql/ippool/postgresql/procedure.sql
	  Patch from Terry Burton.
	* Add SQL IP pool support for Microsoft SQL Server
	  See raddb/mods-config/sql/ippool/mssql/
	  Patch from Terry Burton.
	* Added RCNTEC dictionary. Closes #3168.
	* Added Pica8 dictionary. Closes #3179.
	* Add TLS-Client-Cert-Valid-Since attribute holding notBefore date.
	  Patch from Boris Lytochkin.  Fixes #3157.
	* Generate attributes containing unknown OIDs.
	  See raddb/sites-available/tls.  Patch from Boris Lytochkin.
	* Update the WiMAX dictionary.
	* Added ability to rlm_python(Python2) show a stacktrace from errors. #2979
	* Add WiFi Alliance Policy OIDs.  See raddb/certs/xpextensions
	  Patch from Stefan Winter.
	* radmin now shows coa stats, too.
	* Sample schema extensions for summarizing data in SQL.
	  See mods-config/sql/main/*/process-radacct.sql
	  Many patches from Terry Burton.
	* Update dictionary.aerohive, dictionary.fortinet,
	  dictionary.arista and dictionary.erx
	* Added VAS Experts dictionary.
	* Many updates to RPM and jenkins builds from Matthew Newton
	* Added %C (time now in seconds) and %c (microsecond component of now)
	  back-ported from the "master" branch.
	* Add reload capability to systemd unit file in Debian and RedHat.